--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
         <div class="tools-grid">
             <!-- TikTok Tool -->
-            <div class="tool-card tiktok" onclick="window.location.href='tiktok.html'">
+            <div class="tool-card tiktok" onclick="window.location.href='platform/tiktok.html'">
                 <div class="tool-icon">🔵</div>
                 <div class="tool-title">TikTok / Tokopedia</div>
                 <span class="tool-badge badge-tiktok">TIKTOK</span>
@@ -290,7 +290,7 @@
             </div>
 
             <!-- Shopee Tool -->
-            <div class="tool-card shopee" onclick="window.location.href='shopee.html'">
+            <div class="tool-card shopee" onclick="window.location.href='platform/shopee.html'">
                 <div class="tool-icon">🟠</div>
                 <div class="tool-title">Shopee</div>
                 <span class="tool-badge badge-shopee">SHOPEE</span>
@@ -306,7 +306,7 @@
             </div>
 
             <!-- Hybrid Tool -->
-            <div class="tool-card hybrid" onclick="window.location.href='backup.html'">
+            <div class="tool-card hybrid" onclick="window.location.href='hybrid.html'">
                 <div class="tool-icon">🔄</div>
                 <div class="tool-title">Hybrid (Multi-Platform)</div>
                 <span class="tool-badge badge-hybrid">HYBRID</span>
