--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         </div>
 
         <div class="footer">
-            <p>© 2025 LUME SHOP Packing Tool • Made with ❤️ for warehouse efficiency</p>
+            <p>Made with ❤️</p>
         </div>
     </div>
 </body>
