--- a/platform/shopee.html
+++ b/platform/shopee.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Packing Tool - Shopee Invoice</title>
+    <title>SPLITING TOOL - Shopee Invoice</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
@@ -311,7 +311,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>📦 Packing Tool<span class="platform-badge">SHOPEE</span></h1>
+        <h1>📦 SPLITING TOOL<span class="platform-badge">SHOPEE</span></h1>
         <p class="subtitle">Upload invoice PDF dari Shopee untuk split & grouping otomatis per kardus</p>
 
         <div class="upload-area" id="uploadArea">
