--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Packing Tool - LUME SHOP</title>
+    <title>Splitting Tool - LUME Warehouse</title>
     <style>
         * {
             margin: 0;
@@ -266,7 +266,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">📦</div>
-            <h1>LUME SHOP Packing Tool</h1>
+            <h1>LUME Warehouse Splitting Tool</h1>
             <p class="subtitle">
                 Automated invoice splitting & box grouping tool. Pilih platform sesuai dengan sumber invoice Anda.
             </p>
