--- a/platform/shopee.html
+++ b/platform/shopee.html
@@ -322,7 +322,7 @@
         </div>
 
         <div style="text-align: center;">
-            <button class="btn" id="processBtn" disabled>🚀 Proses Packing</button>
+            <button class="btn" id="processBtn" disabled>🚀 Proses Splitting/button>
         </div>
 
         <div class="progress-section" id="progressSection">
