--- a/platform/tiktok.html
+++ b/platform/tiktok.html
@@ -311,7 +311,7 @@
         </div>
 
         <div style="text-align: center;">
-            <button class="btn" id="processBtn" disabled>🚀 Proses Packing</button>
+            <button class="btn" id="processBtn" disabled>🚀 Proses Splitting</button>
         </div>
 
         <div class="progress-section" id="progressSection">
